# Minecraft-Daemon

./: .gitignore  .gitmodules  .onedev-buildspec.yml  20220716083905_init_db.go  CMakeLists.txt  Jenkinsfile  LICENSE  Makefile.in  README.md  aclocal.m4  autogen.sh  cmdParse.cpp  cmdParse.h  commandFunc.cpp  commandFunc.h  configure  configure.ac  database.go  get_code_cov.sh  go.mod  go.sum  helperFunc.cpp  helperFunc.h  loggingFunc.cpp  loggingFunc.h  main.cpp  main.go  main.h  mcServer.cpp  mcServer.h  migrations.go  minecraft-daemon.conf  minecraft-daemon.toml  minecraft-daemon.toml.example  minecraftServer.go  readConfig.cpp  readConfig.h  restAPI.go  runningServerList.go  serverList.go  (+11 more)
.github/workflows/: codeql.yml  scorecards.yml
ideas/: Add-Server-vs-Create-Server.md  GUI.md  bukkit-spigot-paper-support.md  controller-application.md  database.md  duplicate-server-definition.md  easy-pretty-server-crash-report.md  forge-support.md  initial-setup.md  mcserver-config-parsing.md  plugin-mod-management.md  server-jar-update.md  server-log-handling.md  server-log-handling.txt  server-output-parsing.md  understand-server-exit.md  windows-support.md
src/: CMakeLists.txt  commandFunc.cpp  commandFunc.h  helperFunc.cpp  loggingFunc.cpp  main.cpp  main.h  mcServer.cpp  mcServer.h  readConfig.cpp  serverConfig.cpp  serverConfig.h  serverMenu.cpp  serverMenu.h  sqlFunc.cpp  sqlFunc.h
tests/: CMakeLists.txt  change-server-settings.test  interact-with-server.test  list-running-servers.test  no-running-server.test  no-servers-have-been-created.test  run-all-tests.sh  run-given-test.sh  start-and-remove-running.test  start-and-stop-server.test  stop-within-interact.test
